login signup page made responsive

--- a/frontend/src/styles/Loginstyle.css
+++ b/frontend/src/styles/Loginstyle.css
@@ -91,8 +91,11 @@ h3 {
     color: #333;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 750px) {
     form {
-        max-width: 100%;
+        min-width: 100%;
+    }
+    .loginphoto{
+      display: none;
     }
 }
