--- a/frontend/src/styles/Signupstyle.css
+++ b/frontend/src/styles/Signupstyle.css
@@ -75,8 +75,11 @@
 	color: #333;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 750px) {
 	.signup-form {
 		max-width: 100%;
+	}
+	.Signupphoto{
+		display: none;
 	}
 }
