--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -99,9 +99,6 @@
     letter-spacing: 0.8px;
 }
 
-.ft-list-items {
-    list-style-type: none;
-} 
 .ft-list-items li a {
     text-decoration: none;
     color: #a5a7ac;
@@ -122,7 +119,6 @@
     border-bottom: 2px dotted #a5a7ac;
 }
 
-/* CopyRight */
 .ft-copyright {
     padding: 24px 40px;
     display: flex;
@@ -138,9 +134,9 @@
 .ft-social-links {
     list-style-type: none;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    gap: 50px;
+    gap: 2rem;
 }
 
 .ft-social-links li a {
@@ -171,9 +167,13 @@
 }
 
 /* Responsive */
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 768px) {
     .footer-container {
         padding: 24px;
+    }
+
+    .ft-title {
+        width: 100%;
     }
 
     .ft-description {
@@ -198,6 +198,8 @@
     }
 
     .ft-social-links {
-        margin: 16px 0 0;
+        margin: 0;
+        padding: 0;
+        gap: 0;
     }
-} 
+}
