--- a/frontend/src/styles/NavBar.css
+++ b/frontend/src/styles/NavBar.css
@@ -1,6 +1,6 @@
 .navbar {
 	background-color: #1f5156;
-	height: 80px;
+	height: 70px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -10,17 +10,17 @@
 	z-index: 20;
 }
 
-.logininfo {
-	color: rgb(245, 243, 243);
-}
-
 .nav-container {
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
 	width: 100%;
-	max-width: 100%;
-	position: relative;
+	max-width: 1500px;
+}
+
+.logininfo {
+	color: pink;
+	display: none;
 }
 
 .nav-logo,
@@ -30,11 +30,14 @@
 	display: flex;
 	cursor: pointer;
 	text-decoration: none;
-	font-size: 2rem;
+	font-size: 2.2rem;
 	font-weight: 500;
-	flex-grow: 1;
 	align-items: center;
 	justify-items: center;
+}
+
+.nav-logo span {
+	margin-left: 0.5rem;
 }
 
 .nav-logo .icon {
@@ -44,7 +47,8 @@
 }
 
 .icon {
-	margin-right: 5px;
+	border-radius: 5px;
+	overflow: hidden;
 }
 
 .nav-menu {
@@ -98,14 +102,59 @@
 	height: 2rem;
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 1050px) {
+	.navbar {
+		font-size: 1rem;
+	}
+
+	.nav-logo,
+	.nav-logo:hover {
+		font-size: 35px;
+	}
+	
+	.nav-logo .icon {
+		width: 45px;
+		height: 45px;
+	}
+	
+	.nav-links,
+	.nav-links:hover {
+		padding: 0.5rem 0.8rem;
+	}
+	
+	.nav-item {
+		margin-right: 1rem;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.navbar {
+		height: 50px;
+		padding: 0 15px;
+	}
+
+	.nav-logo,
+	.nav-logo:hover {
+		margin-left: 0;
+		font-size: 25px;
+	}
+	
+	.nav-logo .icon {
+		width: 32px;
+		height: 32px;
+	}
+
+	.nav-logo span {
+		margin-left: 0.2rem;
+	}
+
 	.nav-menu {
 		display: flex;
 		flex-direction: column;
 		width: 100%;
 		border-top: 1px solid #fff;
 		position: absolute;
-		top: 80px;
+		top: 50px;
 		left: -110%;
 		opacity: 1;
 		transition: all 0.5s ease;
@@ -125,7 +174,6 @@
 	}
 
 	.nav-links {
-		padding: 1.5rem;
 		width: 100%;
 		display: table;
 	}
@@ -141,6 +189,8 @@
 		cursor: pointer;
 		color: #ffdd40;
 	}
+
+	.logininfo {
+		display: block;
+	}
 }
-
-
